added more to topbar

--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <style>
-    ul {
+    navbar {
+        display: flex;
+        justify-content: flex-end;
+    }
+    .topbar {
         list-style-type: none;
         display: flex;
         flex-direction: row;
-        padding: 5vh 2.5vw;
+        padding: 5vh 0.75vw;
         margin: 0;
         font-size: 12.5px;
     }
+    .topbar-right {
+        margin-left: auto;
+    }
+
+
     navbar li a{
         padding: 0.8vw;
         text-decoration: none;
@@ -22,6 +31,15 @@
         align-self: flex-start;
     }
 
+    #apps-img {
+        width: 1vw;
+        height: auto;
+    }
+
+    #apps-img:hover {
+        background: black;
+    }
+
 </style>
 
 <html>
@@ -31,9 +49,15 @@
 <main>
     <body>
         <navbar>
-            <ul>
+            <ul class="topbar topbar-left">
                 <li><a href="#">About</a></li>
                 <li><a href="#">Store</a></li>
+            </ul>
+            <ul class="topbar topbar-right">
+                <li><a href="#">Gmail</a></li>
+                <li><a href="#">Images</a></li>
+                <li><a href="#"><img id="apps-img" src="apps.png"></a></li>
+
             </ul>
         </navbar>
     </body>
