--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         font-size: 12.5px;
     }
     .topbar-right {
+        display: flex;
         margin-left: auto;
+        align-content: space-around;
     }
 
 
@@ -32,12 +34,35 @@
     }
 
     #apps-img {
-        width: 1vw;
+        width: 2em;
         height: auto;
     }
 
     #apps-img:hover {
         background: black;
+    }
+
+    #profile-img {
+        width: 3em;
+        height: auto;
+        border-radius: 50%;
+    }
+
+    input[type=text] {
+        width: 100%;
+        height: 40px;
+        border-radius: 25px;
+        border: 1px solid rgba(116, 116, 116, 0.397);
+        padding-left: 30px
+    }
+
+    input[type=text]:hover {
+        box-shadow: 0 0 5px rgb(128, 128, 128);
+    }
+
+    form {
+        width: 50%;
+        margin: auto;
     }
 
 </style>
@@ -57,9 +82,15 @@
                 <li><a href="#">Gmail</a></li>
                 <li><a href="#">Images</a></li>
                 <li><a href="#"><img id="apps-img" src="apps.png"></a></li>
+                <li><a href="#"><img id="profile-img" src="profilepic.png"></a></li>
 
             </ul>
         </navbar>
+        <div>
+            <form>
+                <input type="text" id="search" for="search">
+            </form>
+        </div>
     </body>
 </main>
 
